--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,7 @@ pipeline{
     agent any
         stages{
         stage{"Deploy"}{
+        steps{
         echo"Deploy to xyz environment"
         }
        
