--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,9 +2,10 @@ pipeline{
     agent any
         stages{
         stage{"Deploy"}{
+        steps{
         echo"Deploy to xyz environment"
         }
-       
+       }
 
 
 }
