--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,8 @@ pipeline{
     agent any
         stages{
         stage{"Deploy"}{
+        steps{
         echo"Deploy to xyz environment"
         }
-       
+       }
        }
